--- a/capitalize/Gemfile
+++ b/capitalize/Gemfile
@@ -5,7 +5,8 @@ group :development do
   gem 'rspec'
   gem 'guard-rspec'
   gem 'rb-notifu'
-  gem 'win32console'
+#  gem 'win32console'
   # gem 'ruby_gntp'
 #  gem 'wdm'
+  gem 'rspec-sticky_seed'
 end
